--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -20,7 +19,7 @@
       display: block;
     }
     .chinese-font {
-      font-family: 'Ma+Shan+Zheng', cursive;
+      font-family: 'Ma Shan Zheng', cursive;
     }
     /* Simple spinner for loading state */
     #root:empty::before {
