--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     .chinese-font {
       font-family: 'Ma Shan Zheng', cursive;
     }
-    /* Simple spinner for loading state */
+    /* 简单加载动画 */
     #root:empty::before {
       content: '';
       position: absolute;
