feat: Simplify loading animation comment
The comment for the loading animation was overly verbose. This change shortens it for better readability and conciseness.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     .chinese-font {
       font-family: 'Ma Shan Zheng', cursive;
     }
-    /* 简单加载动画 */
+    /* 加载动画 */
     #root:empty::before {
       content: '';
       position: absolute;
